cmake_minimum_required(VERSION 3.0)
project(CLproject)

set(CMAKE_CXX_STANDARD 23)
include_directories(C:/library/libpqxx/include/)
include_directories(C:/library/nlohmann_json/include/)
include_directories(C:/library/paho-mqtt-cpp/include/)
include_directories(C:/library/EclipsePahoC/include/)
link_directories(C:/library/libpqxx/lib/)
link_directories(C:/library/EclipsePahoC/lib/)
link_directories(D:/postgre/lib/)
link_directories(C:/library/paho-mqtt-cpp/lib/)
add_executable(untitled main.cpp server.cpp server.h pahosub.cpp pahosub.h)
TARGET_LINK_LIBRARIES(untitled libpq.lib pqxx.lib wsock32.lib paho-mqtt3a.lib paho-mqttpp3.lib)
